--- a/main/templates/_base.html
+++ b/main/templates/_base.html
@@ -6,15 +6,25 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Django + Tailwind CSS + Flowbite</title>
+    <title>My ToDo App</title>
+
+    <!-- Google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
+      rel="stylesheet" />
+    <!-- Bootstrap Icons -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" />
 
     <link rel="stylesheet" href="{% static 'src/output.css' %}" />
   </head>
 
-  <body class="bg-green-50">
-    <div class="container mx-auto mt-4">
-      {% block content %}
-      {% endblock content %}
+  <body class="bg-slate-50">
+    <div class="container max-w-lg mx-auto p-4">
+      {% block content %} {% endblock content %}
 
       <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.8.1/flowbite.min.js"></script>
     </div>
