--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -1,5 +1,66 @@
-{% extends "_base.html" %}
+{% extends "_base.html" %} {% block content %}
 
-{% block content %}
-  <h1 class="text-3xl text-green-800">Django + Tailwind CSS + Flowbite</h1>
+<form method="POST" action="{% url 'main:index' %}">
+  {% csrf_token %}
+  <!-- ToDo Card -->
+  <div class="block mb-6 p-5 bg-white border rounded-lg shadow dark:bg-slate-800">
+    <h1 class="text-3xl text-center font-semibold text-blue-800 mb-5">ToDo App</h1>
+    <div class="flex flex-col space-y-3">
+      {{form.todo}}
+      <button
+        name="create"
+        class="text-white bg-blue-700 hover:bg-blue-800 font-medium rounded-lg text-sm px-5 py-2.5 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none">
+        Create
+      </button>
+    </div>
+  </div>
+
+  <!-- Notification -->
+  {% if messages %} {% for message in messages %}
+  <div
+    class="flex items-center p-4 mb-4 text-sm text-green-800 border border-green-300 rounded-lg bg-green-50 dark:bg-gray-800 dark:text-green-300 dark:border-green-800"
+    role="alert">
+    {{message}}
+  </div>
+  {% endfor %} {% endif %}
+
+  <!-- ToDo List -->
+  <ul>
+    {% for todo in todos %} {% if todo.completed %}
+    <li class="border-b last:border-b-0 px-1 py-2 flex space-x-2 items-center">
+      <button formnovalidate name="edit" value="{{todo.id}}" class="text-slate-400 text-xl">
+        <i class="bi bi-check-circle-fill"></i>
+      </button>
+      <span class="grow font-semibold text-slate-400">{{todo}}</span>
+      <button
+        formnovalidate
+        name="delete"
+        value="{{todo.id}}"
+        class="w-10 h-10 rounded-full bg-red-200 text-red-800">
+        <i class="bi bi-trash"></i>
+      </button>
+    </li>
+    {% else %}
+    <li class="border-b last:border-b-0 px-1 py-2 flex space-x-2 items-center">
+      <button formnovalidate name="edit" value="{{todo.id}}" class="text-slate-800 text-xl">
+        <i class="bi bi-circle"></i>
+      </button>
+      <span class="grow font-semibold text-slate-800">{{todo}}</span>
+      <button
+        formnovalidate
+        name="delete"
+        value="{{todo.id}}"
+        class="w-10 h-10 rounded-full bg-red-200 text-red-800">
+        <i class="bi bi-trash"></i>
+      </button>
+    </li>
+    {% endif %} {% empty %}
+    <div
+      class="flex items-center p-4 mb-4 text-sm text-yellow-800 border border-yellow-300 rounded-lg bg-yellow-50 dark:bg-gray-800 dark:text-yellow-300 dark:border-yellow-800"
+      role="alert">
+      There are no ToDos available. Enter a new ToDo
+    </div>
+    {% endfor %}
+  </ul>
+</form>
 {% endblock content %}
